--- a/twit.css
+++ b/twit.css
@@ -5,3 +5,30 @@ body {
     padding: 60px 50px;
     background-color: black;
 }
+
+button {
+    -moz-box-shadow:inset 0px 1px 0px 0px #fbafe3;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #fbafe3;
+    box-shadow:inset 0px 1px 0px 0px #fbafe3;
+    background-color:#ff5bb0;
+    -moz-border-radius:6px;
+    -webkit-border-radius:6px;
+    border-radius:6px;
+    border:1px solid #ee1eb5;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:15px;
+    font-weight:bold;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #c70067;
+}
+.myButton:hover {
+    background-color:#ef027d;
+}
+.myButton:active {
+    position:relative;
+    top:1px;
+}
