--- a/twit.css
+++ b/twit.css
@@ -1,5 +1,5 @@
 body {
-    font: 20px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font: 12px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 
     color:aqua;
     padding: 60px 50px;
@@ -25,10 +25,19 @@ button {
     text-decoration:none;
     text-shadow:0px 1px 0px #c70067;
 }
-.myButton:hover {
+button:hover {
     background-color:#ef027d;
 }
-.myButton:active {
+button:active {
     position:relative;
     top:1px;
+}
+
+#timestamp {
+    color: lawngreen;
+    font-size: 8px;
+}
+
+br {
+    font-size: 7px;
 }
